Programming Guide: update standalone cover
[ ] Will break Win32 build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Developer/ProgrammingGuide/cover.tex
+++ b/Developer/ProgrammingGuide/cover.tex
@@ -20,10 +20,10 @@
 \begin{document}
 \thispagestyle{empty}
 
-\begin{textblock}{}(15.92,4.45)
+\begin{textblock}{}(15.92,4.48)
   \begin{rotate}{270}
     \colorbox{red}{\textsf{\bfseries\Large\textcolor{white}{
-          \hspace{2.09cm}Equalizer 0.6 Programming Guide\hspace{2.09cm}}}}
+          \hspace{.96cm}Equalizer 0.9 Programming and User Guide\hspace{.96cm}}}}
   \end{rotate}
 \end{textblock}
 
@@ -31,7 +31,7 @@
 \parbox[t]{\spacewidth}{\hfill}
 \parbox[t]{\boxwidth}{
   \center
-  \textsf{\textbf{\huge Equalizer Programming Guide}}\\[\bigskipamount]
+  \textsf{\textbf{\huge Equalizer\\Programming and User Guide}}\\[\bigskipamount]
   {\Large Eyescale Software GmbH}
 }\\
 \vfill
@@ -42,12 +42,10 @@
 \\
 \vfill
 \parbox[t]{\spacewidth}{\hfill}
-\parbox[t]{\boxwidth}{ 
-  {\Large\sffamily The official reference for creating parallel,
-    scalable {OpenGL\texttrademark} applications with the Equalizer
-    parallel rendering framework}\\\vspace{1cm}
-  \center 
-  {\Large Revision 1.4 for Equalizer 0.6}\\[\medskipamount]
+\parbox[t]{\boxwidth}{ \center{\Large The official reference for developing and
+    deploying parallel, scalable OpenGL\texttrademark\ applications
+    based on the Equalizer parallel rendering framework }\\\vspace{1cm}
+  {\Large Revision 1.6 for Equalizer 0.9}\\[\medskipamount]
 }
 
 \end{document}
