Final version of 0.9 Programming and User Guide
[ ] Will break Win32 build
[ ] May break existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Developer/ProgrammingGuide/cover.tex
+++ b/Developer/ProgrammingGuide/cover.tex
@@ -6,7 +6,7 @@
 \usepackage[vcentering,pdftex]{geometry}
 \usepackage[absolute]{textpos}
 
-\geometry{papersize={1220pt,860pt}}
+\geometry{papersize={1224pt,860pt}}
 
 \newcommand{\boxwidth}{5in}
 \newcommand{\spacewidth}{604pt}
@@ -20,10 +20,10 @@
 \begin{document}
 \thispagestyle{empty}
 
-\begin{textblock}{}(15.92,4.48)
+\begin{textblock}{}(15.95,4.48)
   \begin{rotate}{270}
-    \colorbox{red}{\textsf{\bfseries\Large\textcolor{white}{
-          \hspace{.96cm}Equalizer 0.9 Programming and User Guide\hspace{.96cm}}}}
+    \colorbox{red}{\textsf{\bfseries\Large\textcolor{white}{\resizebox{341.5pt}{14pt}{{\quad
+              Equalizer 0.9 Programming and User Guide\quad}}}}}
   \end{rotate}
 \end{textblock}
 
@@ -37,7 +37,7 @@
 \vfill
 \hspace{-128pt}
   \includegraphics[width=604pt]{images/teaserBack.pdf}
-  \hspace{11pt}
+  \hspace{16.38pt}
   \includegraphics[width=604pt]{images/teaser.pdf}
 \\
 \vfill
