Minor PUG updates based on print version
[ ] Will break Win32 build
[ ] May break existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Developer/ProgrammingGuide/cover.tex
+++ b/Developer/ProgrammingGuide/cover.tex
@@ -20,10 +20,11 @@
 \begin{document}
 \thispagestyle{empty}
 
-\begin{textblock}{}(15.95,4.48)
+\begin{textblock}{}(15.95,4.42)
   \begin{rotate}{270}
-    \colorbox{red}{\textsf{\bfseries\Large\textcolor{white}{\resizebox{341.5pt}{14pt}{{\quad
-              Equalizer 0.9 Programming and User Guide\quad}}}}}
+    \setlength{\fboxsep}{2.3mm} 
+    \colorbox{red}{\textsf{\bfseries\Large\textcolor{white}{{\hspace{8.3mm}Equalizer
+            0.9 Programming and User Guide\hspace{8.3mm}}}}}
   \end{rotate}
 \end{textblock}
 
