--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -25,7 +25,7 @@
 \end{textblock} {\Large The official reference for developing and
   deploying parallel, scalable OpenGL\texttrademark\ applications based on
   the Equalizer parallel rendering framework}\\\vspace{1cm}
-Version 1.6 for Equalizer 0.9\\[\medskipamount]
+Version 1.7.0 for Equalizer 0.9+svn\\[\medskipamount]
 %  \today
 }
 
@@ -125,6 +125,7 @@ Combined 2D/DB [top left], DPlex [middle left], Pixel [middle center],
     1.2     & Apr 15, 2008 & Revision for Equalizer 0.5\\
     1.4     & Nov 25, 2008 & Revision for Equalizer 0.6\\
     1.6     & Aug 07, 2009 & Revision for Equalizer 0.9\\
+    1.7.0   & Sep 09, 2009 & Updates based on hardcopy print\\
     \hline
   \end{tabularx}}
 \clearpage
@@ -187,7 +188,7 @@ This model is naturally followed by Equalizer, thus making application
 development as easy as possible.
 
 
-\subsection{Installing Equalizer and running \textsf{eqPly}}
+\subsection{Installing Equalizer and Running \textsf{eqPly}}
 
 Equalizer can be installed by downloading the
 distribution\footnote{\link{http://www.equalizergraphics.com/downloads.html}}
@@ -284,7 +285,7 @@ mode is also known as sort-first or SFR.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/2D.pdf}
-  {\caption{ A 2D compound}}
+  {\caption{ A 2D Compound}}
 \end{wrapfigure}
 The advantage of this mode is a low, constant IO overhead for the pixel
 transfers, since only color information has to be transmitted. The upper
@@ -335,7 +336,7 @@ constant (see \fig{fDirectSend}).
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/DB.pdf}
-  {\caption{\label{fDB}\small A database compound}}
+  {\caption{\label{fDB}\small A Database Compound}}
 \end{wrapfigure}
 The application has to partition the database so that the rendering units
 render only part of the database. Some OpenGL features do not work
@@ -378,7 +379,7 @@ and is often combined with other modes.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/EYE.pdf}
-  {\caption{\label{fStereoCmp}\small A stereo compound}}
+  {\caption{\label{fStereoCmp}\small A Stereo Compound}}
 \end{wrapfigure}
 Eye compounds in Equalizer are configured using the \textsf{eye}
 parameter, limiting the child to render the \textsf{[ LEFT ]} or
@@ -397,7 +398,7 @@ destination window. This mode is also known as time-multiplex or AFR.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/DPlex.pdf}
-  {\caption{ A DPlex compound}}
+  {\caption{ A DPlex Compound}}
 \end{wrapfigure}
 
 Due to the frame consistency between consecutive frames, this mode scales
@@ -427,7 +428,7 @@ the pixel transfers during recomposition.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/Pixel.pdf}
-  {\caption{\label{fPixel}\small A pixel compound}}
+  {\caption{\label{fPixel}\small A Pixel Compound}}
 \end{wrapfigure}
 OpenGL functionality influenced by the raster position will not work
 correctly with pixel compounds, or needs at least special
@@ -444,7 +445,7 @@ mode, and should choose it over 2D compounds.
 
 \begin{wrapfigure}{r}{.382\textwidth}
   \includegraphics[width=.382\textwidth]{images/pixelKernel.pdf}
-  {\caption{\label{fPixelKernel}\small Pixel compound kernel}}
+  {\caption{\label{fPixelKernel}\small Pixel Compound Kernel}}
 \end{wrapfigure}
 Pixel compounds in Equalizer are configured using the \textsf{pixel}
 parameter, using the values \textsf{[ x y width height]}  to configure
@@ -462,8 +463,8 @@ to configure the pixel decomposition. The destination channel can
 therefore not be rendered in place, like with the other compound modes.
 \begin{figure}[ht!]\center
   \includegraphics[width=.9\textwidth]{images/pixelKernels.pdf}
-  {\caption{\label{fPixelKernels}Example pixel kernels for a
-      four-to-one pixel compound}}
+  {\caption{\label{fPixelKernels}Example Pixel Kernels for a
+      four-to-one Pixel Compound}}
 \end{figure}
 
 
@@ -544,7 +545,7 @@ define views on a canvas.
 
 \begin{figure}[ht!]\center
   \includegraphics[width=\textwidth]{images/cave.pdf}
-  {\caption{\label{fConfig}An example configuration}}
+  {\caption{\label{fConfig}An Example Configuration}}
 \end{figure}
 
 \fig{fConfig} shows an example configuration for a four-side
@@ -668,7 +669,7 @@ and distance of the projection wall.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/frusta.pdf}
-  {\caption{\label{fFrusta}Wall and projection parameters}}
+  {\caption{\label{fFrusta}Wall and Projection Parameters}}
 \end{wrapfigure}
 
 \fig{fFrusta} illustrates the wall and projection frustum parameters.
@@ -702,7 +703,7 @@ covered by the segment on the physical canvas. Set the output
 
 \begin{wrapfigure}{r}{.382\textwidth}
   \includegraphics[width=.382\textwidth]{images/canvas.pdf}
-  {\caption{\label{fCanvas}A canvas using four, non-consecutive segments}}
+  {\caption{\label{fCanvas}A Canvas using four Segments}}
 \end{wrapfigure}
 
 For non-planar displays, configure the frustum as described in
@@ -731,7 +732,7 @@ one view is used for all canvases.
 
 \begin{wrapfigure}{r}{.382\textwidth}
   \includegraphics[width=.382\textwidth]{images/layout.png}
-  {\caption{\label{fLayout}A layout with four views}}
+  {\caption{\label{fLayout}A Layout with four Views}}
 \end{wrapfigure}
 
 Enable the layout on each desired canvas by adding it to the
@@ -747,7 +748,7 @@ scalable rendering.
 
 \begin{figure}[ht!]\center
   \includegraphics[width=.9\textwidth]{images/wallLayout.jpg}
-  {\caption{A display wall using a six-segment canvas with a two-view layout}}
+  {\caption{A Display Wall using a six-Segment Canvas with a two-View Layout}}
 \end{figure}
 
 Layouts can be switched at runtime by the application. Switching a
@@ -984,7 +985,7 @@ configuration files using equalizers.
 \paragraph{Load Equalizer}
 \vspace{-2ex}\begin{wrapfigure}{r}{.382\textwidth}
   \includegraphics[width=.382\textwidth]{images/lb.pdf}
-  {\caption{\label{fLoadBalancing}\small 2D load-balancing}}
+  {\caption{\label{fLoadBalancing}\small 2D Load-Balancing}}
 \end{wrapfigure}
 While pixel and stereo compounds are naturally load-balanced, 2D and DB
 compounds often need load-balancing for optimal rendering
@@ -1028,8 +1029,8 @@ camera position.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/viewLB.pdf}
-  {\caption{\label{fViewLoadBalancing}\small Cross-segment
-      load-balancing for two segments using eight GPU's}}
+  {\caption{\label{fViewLoadBalancing}\small Cross-Segment
+      Load-Balancing for two Segments using eight GPU's}}
 \end{wrapfigure}
 The view equalizer can also use resources from another display resource,
 if this resource has little rendering load by itself. It is therefore
@@ -1040,8 +1041,8 @@ is typically in a few segments only, e.g., for a CAVE.
 
 \begin{wrapfigure}{l}{.382\textwidth} 
     \includegraphics[width=.382\textwidth]{images/viewLB.png}
-    {\caption{\label{fViewLoadBalancing2}\small Cross-segment
-        load-balancing for a CAVE}}
+    {\caption{\label{fViewLoadBalancing2}\small Cross-Segment
+        Load-Balancing for a CAVE}}
 \end{wrapfigure}
 \fig{fViewLoadBalancing2} shows cross-usage for a five-sided CAVE driven
 by five GPU's. The front and left segments show the model and have a
@@ -1073,7 +1074,7 @@ applications, such as volume rendering and ray-tracing.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/dfr.pdf}
-  {\caption{\label{fDFR}\small Dynamic Frame Resolution}}
+  {\caption{\label{fDFR}Dynamic Frame Resolution}}
 \end{wrapfigure}
 \fig{fDFR}\footnote{Data set courtesy of Olaf Ronneberger, Computer
   Science Institute, University of Freiburg, Germany} shows DFR for
@@ -1097,7 +1098,7 @@ a large-scale display on an operator station.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/monitorEq.pdf}
-  {\caption{\label{fMonitorEq}\small Monitoring a projection wall}}
+  {\caption{\label{fMonitorEq}Monitoring a Projection Wall}}
 \end{wrapfigure}
 A monitor equalizer adjusts the frame zoom of the output frames used to
 observe the rendering, depending on the destination channel size. The
@@ -1200,7 +1201,7 @@ Application developers are exposed to the following namespaces:
 
 \begin{wrapfigure}{r}{.382\textwidth}
   \includegraphics[width=.382\textwidth]{images/namespaces}
-  {\caption{\label{fNamespaces}Namespace layering for eqPly and eqServer}}
+  {\caption{\label{fNamespaces}Namespace Layering for eqPly and eqServer}}
 \end{wrapfigure}
 Examples shipped with Equalizer are implemented in their own namespaces,
 e.g., \textsf{eqPly} or \textsf{eVolve}. They rely mostly on subclassing
@@ -1236,7 +1237,7 @@ of thread synchronization or protection of shared data.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/model.pdf}
-  {\caption{\label{fModel}Simplified execution model}}
+  {\caption{\label{fModel}Simplified Execution Model}}
 \end{wrapfigure}
 The main thread is responsible for maintaining the application logic. It
 reacts on user events, updates the data model and requests new frames to
@@ -1271,11 +1272,11 @@ frame synchronization.
 
 
 
-\section{\label{sEqPly}The eqPly polygonal renderer}
+\section{\label{sEqPly}The eqPly Polygonal Renderer}
 
 \begin{figure}[ht!]\center
   \includegraphics[width=.9\textwidth]{images/uml}
-  {\caption{\label{fUml}UML diagram eqPly and relevant Equalizer classes}}
+  {\caption{\label{fUml}UML Diagram eqPly and relevant Equalizer Classes}}
 \end{figure}
 
 In this section the source code of \textsf{eqPly} is explained in
@@ -1578,7 +1579,7 @@ explained in \sref{sThreadModel}.
 
 \begin{figure}[ht!]\center
   \includegraphics[width=\textwidth]{images/syncAsync}
-  {\caption{\label{fSyncAsync}Synchronous and asynchronous execution}}
+  {\caption{\label{fSyncAsync}Synchronous and Asynchronous Execution}}
 \end{figure}
 \fig{fSyncAsync} shows the execution of the rendering tasks of a 2-node
 2D compound without latency and with a latency of one frame. The
@@ -1727,8 +1728,8 @@ position to the rendering methods.
     \includegraphics[width=.382\textwidth]{images/umlObjectProxy}}\hfil
   \subfigure[]{\label{fObjectDist3}
     \includegraphics[width=.382\textwidth]{images/umlObjectMI}}%
-  {\caption{\label{fObjectDist}Object distribution using subclassing,
-      proxies or multiple inheritance}}
+  {\caption{\label{fObjectDist}Object Distribution using Subclassing,
+      Proxies or Multiple Inheritance}}
 \end{wrapfigure}
 Distributed objects are addressed using session-unique identifiers,
 because pointers to other objects cannot be distributed directly; they
@@ -2599,7 +2600,7 @@ toolkit, e.g., Qt.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/osWindow.pdf}
-  {\caption{\label{fOSWindow}eq::OSWindow UML class hierarchy}}
+  {\caption{\label{fOSWindow}eq::OSWindow UML Class Hierarchy}}
 \end{wrapfigure}
 All window-system specific functionality is implemented by a
 specialization of \textsf{eq::OS\-Window}. The \textsf{OSWindow} class
@@ -2867,8 +2868,8 @@ void Channel::frameDraw( const uint32_t frameID )
 
 \begin{wrapfigure}{r}{.382\textwidth}
   \includegraphics[width=.382\textwidth]{images/DB.png}
-  {\caption{\label{fDBDest}Destination view of a DB compound using
-      demonstrative coloring}}
+  {\caption{\label{fDBDest}Destination View of a DB Compound using
+      Demonstrative Coloring}}
 \end{wrapfigure}
 After the basic view setup, a directional light is configured, and the
 model is positioned using the camera parameters from the frame data. The
@@ -3336,7 +3337,7 @@ nodes, including the server, using \textsf{Client::initLocal}.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/threads.pdf}
-  {\caption{\label{fThreads}Threads within one node process}}
+  {\caption{\label{fThreads}Threads within one Node Process}}
 \end{wrapfigure}
 During this initialization, Equalizer creates and manages two threads
 for communication, the receiver thread and the command thread. Normally
@@ -3407,7 +3408,7 @@ nodes.
 \begin{figure}[h!t]\center
   \includegraphics[width=.9\textwidth]{images/threadModels.pdf}
   {\caption{\label{fThreadModels}Async, draw\_sync and local\_sync
-    thread synchronization models}}
+    Thread Synchronization Models}}
 \end{figure}
 
 
@@ -3455,7 +3456,7 @@ thread.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/frameSync.pdf}
-  {\caption{\label{fFrameSync}Per-node frame synchronization}}
+  {\caption{\label{fFrameSync}Per-Node Frame Synchronization}}
 \end{wrapfigure}
 Each entity uses \textsf{waitFrame\-Started} to block on the parent's
 \textsf{startFrame}, e.g., \textsf{Pipe::\-frame\-Start} calls
@@ -3495,7 +3496,7 @@ invoked, which is synchronized internally. Once all
 
 \begin{figure}[ht!]\center
   \includegraphics[width=\textwidth]{images/mainloop.pdf}
-  {\caption{\label{fMainLoop}Synchronization of frame tasks}}
+  {\caption{\label{fMainLoop}Synchronization of Frame Tasks}}
 \end{figure}
 
 \fig{fMainLoop} outlines the synchronization for the application, node
@@ -3836,7 +3837,7 @@ application would assign different tracking data to different observers.
   \subfigure[]{\label{fHMD}
     \includegraphics[height=2.5cm]{images/hmd}}%
   {\caption{\label{fImmersive}Monoscopic, Stereoscopic, Tracked and HMD
-    frusta}}
+    Frusta}}
 \end{figure}
 
 \fig{fMono} illustrates a monoscopic view frustum. The viewer is
@@ -3959,7 +3960,7 @@ since it resets the config's running state.
 \begin{wrapfigure}{r}{.382\textwidth}
   \vspace{-2ex}
   \includegraphics[width=.382\textwidth]{images/viewUML.pdf}
-  {\caption{\label{fViewUML}UML hierarchy of \textsf{eqPly::View}}}
+  {\caption{\label{fViewUML}UML Hierarchy of \textsf{eqPly::View}}}
   \vspace{-5ex}
 \end{wrapfigure}
 Changing view frustum parameters is typically done for non-fullscreen
@@ -4125,7 +4126,7 @@ depth information.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/assembly.pdf}
-  {\caption{\label{fAssembly}Hierarchy of assembly classes}}
+  {\caption{\label{fAssembly}Hierarchy of Assembly Classes}}
 \end{wrapfigure}
 The frame synchronization through the frame data allows the input frame
 to wait for the pixel data to become ready, which is signaled by the
@@ -4173,7 +4174,7 @@ of the various compositor functions.
 \begin{wrapfigure}{r}{.618\textwidth}
 %\begin{figure}[h!t]\center
   \includegraphics[width=.618\textwidth]{images/compositor.pdf}
-  {\caption{\label{fCompositor}Functional diagram of the compositor}}
+  {\caption{\label{fCompositor}Functional Diagram of the Compositor}}
 \end{wrapfigure}
 On a high level, the compositor combines multiple input frames using 2D
 tiling, depth-compositing for polygonal data or sorted, alpha-blended
@@ -4292,7 +4293,7 @@ with the server clock. Each statistic event records the originator's
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/statistics}
-  {\caption{\label{fStatistics}Statistics for a two-node 2D compound}}
+  {\caption{\label{fStatistics}Statistics for a two-Node 2D Compound}}
 \end{wrapfigure}
 Statistics are enabled per entity using an attribute hint. The hint
 determines how precise the gathered statistics are. When set to
@@ -4490,7 +4491,7 @@ the listening node.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/netNode.pdf}
-  {\caption{\label{fNetNode}Communication between two nodes}}
+  {\caption{\label{fNetNode}Communication between two Nodes}}
 \end{wrapfigure}
 \fig{fNetNode} shows the communication between two nodes. The nodes in
 the listening state also have a listening connection, which is not shown
@@ -4583,7 +4584,7 @@ the node need to process a different version of the same object.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/netObject.pdf}
-  {\caption{\label{fNetObject}Communication between two objects}}
+  {\caption{\label{fNetObject}Communication between two Objects}}
 \end{wrapfigure}
 Distributed objects provide data synchronization functionality, as
 described in \sref{sNetObject}. Additionally, applications can send
